Fix TeacherService and student delete logic